[tool.poetry]
name = "python-cuda"
version = "0.1.0"
description = ""
authors = ["kutakieu <kutakieu22@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
Cython = "^0.29.28"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
